--- a/environment.monitor.core/pom.xml
+++ b/environment.monitor.core/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>environment.monitor.parent</artifactId>
+        <artifactId>environment.monitor</artifactId>
         <groupId>org.yagel</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
