--- a/environment.monitor.ui/pom.xml
+++ b/environment.monitor.ui/pom.xml
@@ -27,6 +27,7 @@
         <!-- If there are no local customisations, this can also be "fetch" or "cdn" -->
         <vaadin.widgetset.mode>local</vaadin.widgetset.mode>
         <freecharts.version>4.0.0</freecharts.version>
+
     </properties>
 
     <repositories>
@@ -52,8 +53,8 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
+            <version>3.1.0</version>
+            <!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
@@ -83,6 +84,16 @@
             <artifactId>environment.monitor.runner</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+
+        <!--</dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-servlet</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>-->
+
+
     </dependencies>
 
     <build>
@@ -128,6 +139,35 @@
                             </includes>
                         </fileset>
                     </filesets>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.simplericity.jettyconsole</groupId>
+                <artifactId>jetty-console-maven-plugin</artifactId>
+                <version>1.60</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>createconsole</goal>
+                        </goals>
+                        <configuration>
+                            <backgroundImage>${basedir}/src/main/resources/monitor_header_800.png</backgroundImage>
+                        </configuration>
+                    </execution>
+                </executions>
+
+                <configuration>
+                    <additionalDependencies>
+                        <additionalDependency>
+                            <artifactId>jetty-console-requestlog-plugin</artifactId>
+                        </additionalDependency>
+                        <!--   <additionalDependency>
+                               <artifactId>jetty-console-gzip-plugin</artifactId>
+                           </additionalDependency>-->
+                        <additionalDependency>
+                            <artifactId>jetty-console-startstop-plugin</artifactId>
+                        </additionalDependency>
+                    </additionalDependencies>
                 </configuration>
             </plugin>
 
