added github maven repo configuration

--- a/environment.monitor.api/pom.xml
+++ b/environment.monitor.api/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <cxf.version>3.1.11</cxf.version>
+        <root.dir>${project.parent.basedir}</root.dir>
     </properties>
 
     <packaging>war</packaging>
@@ -55,6 +56,21 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
