--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <java.version>1.8</java.version>
         <testng.version>6.10</testng.version>
         <log4j.version>1.2.14</log4j.version>
+        <root.dir>${project.basedir}</root.dir>
+        <!-- <github.global.server>github</github.global.server>-->
     </properties>
 
     <build>
@@ -27,10 +29,62 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.1</version>
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <configuration>
+                        <archive>
+                            <addMavenDescriptor>false</addMavenDescriptor>
+                        </archive>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.1.2</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                    <configuration>
+                        <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
+                        </altDeploymentRepository>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.github</groupId>
+                    <artifactId>site-maven-plugin</artifactId>
+                    <version>0.12</version>
+                    <configuration>
+                        <message>Uploaded environment.monitor artifacts for ${project.version}</message>
+                        <dryRun>false</dryRun>
+                        <branch>refs/heads/mvn-repo</branch>
+                        <server>github</server>
+                        <repositoryName>environment.monitor</repositoryName>
+                        <repositoryOwner>YagelNasManit</repositoryOwner>
+                        <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>site</goal>
+                            </goals>
+                            <phase>site</phase>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
