last status dao test refactoring, and relevant logic. added apache commons to dependency management

--- a/environment.monitor.core/pom.xml
+++ b/environment.monitor.core/pom.xml
@@ -19,6 +19,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
