--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <testng.version>6.10</testng.version>
         <log4j.version>1.2.14</log4j.version>
         <root.dir>${project.basedir}</root.dir>
+        <commons-lang3.version>3.6</commons-lang3.version>
         <!-- <github.global.server>github</github.global.server>-->
     </properties>
 
@@ -119,6 +120,11 @@
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
