--- a/environment.monitor.runner/pom.xml
+++ b/environment.monitor.runner/pom.xml
@@ -81,7 +81,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <skip>true</skip>
-                    <excludes>org.yagel.monitor.runner.test.unit.***</excludes>
+                    <excludes>
+                        <exclude>org.yagel.monitor.runner.test.unit.***</exclude>
+                    </excludes>
                 </configuration>
 
             </plugin>
@@ -89,7 +91,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <includes>org.yagel.monitor.runner.test.intergation.**</includes>
+                    <includes>
+                        <include>org.yagel.monitor.runner.test.intergation.**</include>
+                    </includes>
                 </configuration>
             </plugin>
 
