refactoring in core domain -done. denormalised data in order to increase performance and usability. refactored plugin extension loader to support ned data structure

--- a/environment.monitor.ui/pom.xml
+++ b/environment.monitor.ui/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>environment.monitor.ui</artifactId>
-    <packaging>war</packaging>
+  <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>environment.monitor.ui</name>
 
