--- a/environment.monitor.ui/package.json
+++ b/environment.monitor.ui/package.json
@@ -24,9 +24,11 @@
     "admin-lte": "^2.3.11",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "d3": "^4.10.0",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "0.0.4",
     "jquery": "^3.2.1",
+    "ng2-daterangepicker": "^2.0.7",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
