--- a/environment.monitor.ui/package.json
+++ b/environment.monitor.ui/package.json
@@ -50,7 +50,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "tslint": "^5.3.2",
+    "typescript": "^2.3.4"
   }
 }
