added local env for angular testing from other envs.

--- a/environment.monitor.ui/package.json
+++ b/environment.monitor.ui/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start-dev": "ng serve --host 0.0.0.0 --disable-host-check"
+    "start-dev": "ng serve --environment dev --host 0.0.0.0 --disable-host-check"
   },
   "private": true,
   "dependencies": {
