--- a/environment.monitor.api/src/main/resources/application.properties
+++ b/environment.monitor.api/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 app.name=environment.monitor
 app.description=${app.name}  Tool for continuous gathering, aggregation & representation of any environmental components states
-server.servlet.path=/api
+#server.servlet.path=/api
