--- a/environment.monitor.ui/package.json
+++ b/environment.monitor.ui/package.json
@@ -9,7 +9,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start-dev": "ng serve --environment dev --host 0.0.0.0 --disable-host-check"
+    "start-local": "ng serve --env=local --host 0.0.0.0 --disable-host-check",
+    "build-local": "ng build --env=local",
+    "build-embedded": "ng build --env=embedded"
   },
   "private": true,
   "dependencies": {
@@ -34,8 +36,8 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.1",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/cli": "^1.3.1",
+    "@angular/compiler-cli": "^4.3.2",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
