--- a/environment.monitor.ui/pom.xml
+++ b/environment.monitor.ui/pom.xml
@@ -19,5 +19,91 @@
 
   <properties></properties>
 
+  <profiles>
+    <profile>
+      <id>embed-angular</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.eirslett</groupId>
+            <artifactId>frontend-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>npm run build</id>
+                <goals>
+                  <goal>npm</goal>
+                </goals>
+
+                <configuration>
+                  <arguments>run build-embedded</arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+        <resources>
+          <resource>
+            <directory>target/dist</directory>
+            <targetPath>static</targetPath>
+          </resource>
+        </resources>
+      </build>
+    </profile>
+  </profiles>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>com.github.eirslett</groupId>
+          <artifactId>frontend-maven-plugin</artifactId>
+          <version>1.4</version>
+
+          <configuration>
+            <nodeVersion>v8.1.3</nodeVersion>
+            <npmVersion>5.0.3</npmVersion>
+            <!--<workingDirectory></workingDirectory>-->
+          </configuration>
+
+          <executions>
+            <execution>
+              <id>install node and npm</id>
+              <goals>
+                <goal>install-node-and-npm</goal>
+              </goals>
+            </execution>
+
+            <execution>
+              <id>npm install</id>
+              <goals>
+                <goal>npm</goal>
+              </goals>
+            </execution>
+
+            <execution>
+              <id>npm run build</id>
+              <goals>
+                <goal>npm</goal>
+              </goals>
+
+              <configuration>
+                <arguments>run build</arguments>
+              </configuration>
+            </execution>
+
+          </executions>
+        </plugin>
+      </plugins>
+
+    </pluginManagement>
+
+    <plugins>
+      <plugin>
+        <groupId>com.github.eirslett</groupId>
+        <artifactId>frontend-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+
+  </build>
 
 </project>
