--- a/environment.monitor.core/pom.xml
+++ b/environment.monitor.core/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>environment.monitor</artifactId>
         <groupId>org.yagel</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
