--- a/environment.monitor.runner/pom.xml
+++ b/environment.monitor.runner/pom.xml
@@ -3,14 +3,12 @@
     <parent>
         <artifactId>environment.monitor</artifactId>
         <groupId>org.yagel</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>environment.monitor.runner</artifactId>
     <packaging>jar</packaging>
-
-    <version>1.0-SNAPSHOT</version>
 
     <name>environment.monitor.runner</name>
     <url>http://maven.apache.org</url>
