--- a/environment.monitor.ui/pom.xml
+++ b/environment.monitor.ui/pom.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>environment.monitor</artifactId>
-        <groupId>org.yagel</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>environment.monitor</artifactId>
+    <groupId>org.yagel</groupId>
+    <version>2.0.0</version>
+  </parent>
 
-    <artifactId>environment.monitor.ui</artifactId>
+  <artifactId>environment.monitor.ui</artifactId>
   <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>environment.monitor.ui</name>
 
-    <prerequisites>
-        <maven>3</maven>
-    </prerequisites>
+  <name>environment.monitor.ui</name>
+
+  <prerequisites>
+    <maven>3</maven>
+  </prerequisites>
 
   <properties></properties>
 
