--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
     <groupId>org.yagel</groupId>
     <artifactId>environment.monitor</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <modules>
         <module>environment.monitor.runner</module>
-        <module>environment.monitor.api</module>
+        <module>environment.monitor.server</module>
         <module>environment.monitor.ui</module>
         <module>environment.monitor.plugins</module>
         <module>environment.monitor.core</module>
