updated codeclimate config

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -15,6 +15,7 @@ ratings:
    - "environment.monitor.core/**/*"
    - "environment.monitor.runner/**/*"
    - "environment.monitor.plugins/**/*"
+   - "environment.monitor.ui/**/*"
 
 
 
