--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,21 @@
 language: java
+
 jdk:
   - oraclejdk8
+
 sudo: false
-script: mvn clean verify
+install: true
+
+addons:
+  sonarcloud:
+    organization: "yagelnasmanit-github"
+    branches:
+      - master
+      - develop
+
+script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar
+
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
