--- a/environment.monitor.runner/pom.xml
+++ b/environment.monitor.runner/pom.xml
@@ -77,9 +77,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <skip>true</skip>
                     <excludes>
-                        <exclude>org.yagel.monitor.runner.test.unit.***</exclude>
+                        <exclude>org.yagel.monitor.runner.test.intergation.**</exclude>
                     </excludes>
                 </configuration>
 
