--- a/environment.monitor.test.extension/pom.xml
+++ b/environment.monitor.test.extension/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <root.dir>${project.parent.basedir}</root.dir>
     </properties>
 
     <dependencies>
@@ -31,6 +32,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+            </plugin>
         </plugins>
+
     </build>
 </project>
