--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
                     <configuration>
-                        <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
+                        <altDeploymentRepository>internal.repo::default::file://${root.dir}/target/mvn-repo
                         </altDeploymentRepository>
                     </configuration>
                 </plugin>
@@ -79,11 +79,12 @@
                     <configuration>
                         <message>Uploaded environment.monitor artifacts for ${project.version}</message>
                         <dryRun>false</dryRun>
+                        <merge>true</merge>
                         <branch>refs/heads/mvn-repo</branch>
                         <server>github</server>
                         <repositoryName>environment.monitor</repositoryName>
                         <repositoryOwner>YagelNasManit</repositoryOwner>
-                        <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                        <outputDirectory>${root.dir}/target/mvn-repo</outputDirectory>
                     </configuration>
                     <executions>
                         <execution>
