--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
       - master
       - develop
 
-script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar
+script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io
 
 cache:
   directories:
