--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,5 +17,5 @@ sonar.links.issue=https://github.com/YagelNasManit/environment.monitor/issues
 # =====================================================
 
 # SQ standard properties
-sonar.sources=src/main
-sonar.tests=src/test
+#sonar.sources=src/main
+#sonar.tests=src/test
