--- a/environment.monitor.server/pom.xml
+++ b/environment.monitor.server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>environment.monitor</artifactId>
         <groupId>org.yagel</groupId>
-        <version>2.0.0</version>
+        <version>2.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -25,7 +25,7 @@
                 <dependency>
                     <groupId>org.yagel</groupId>
                     <artifactId>environment.monitor.ui</artifactId>
-                    <version>2.0.0</version>
+                    <version>${project.version}</version>
                 </dependency>
             </dependencies>
         </profile>
