--- a/pom.xml
+++ b/pom.xml
@@ -68,32 +68,9 @@
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
                     <configuration>
-                        <altDeploymentRepository>internal.repo::default::file://${root.dir}/target/mvn-repo
+                        <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
                         </altDeploymentRepository>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>com.github.github</groupId>
-                    <artifactId>site-maven-plugin</artifactId>
-                    <version>0.12</version>
-                    <configuration>
-                        <message>Uploaded environment.monitor artifacts for ${project.version}</message>
-                        <dryRun>false</dryRun>
-                        <merge>true</merge>
-                        <branch>refs/heads/mvn-repo</branch>
-                        <server>github</server>
-                        <repositoryName>environment.monitor</repositoryName>
-                        <repositoryOwner>YagelNasManit</repositoryOwner>
-                        <outputDirectory>${root.dir}/target/mvn-repo</outputDirectory>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>site</goal>
-                            </goals>
-                            <phase>site</phase>
-                        </execution>
-                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -115,6 +92,34 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.12</version>
+                <configuration>
+                    <message>Uploaded environment.monitor artifacts for ${project.version}</message>
+                    <noJekyll>true</noJekyll>
+                    <dryRun>true</dryRun>
+                    <merge>true</merge>
+                    <branch>refs/heads/mvn-repo</branch>
+                    <server>github</server>
+                    <repositoryName>environment.monitor</repositoryName>
+                    <repositoryOwner>YagelNasManit</repositoryOwner>
+                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
     </build>
 
     <dependencyManagement>
