moved beans into spring context, done relevant changes

--- a/environment.monitor.server/pom.xml
+++ b/environment.monitor.server/pom.xml
@@ -52,6 +52,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 
         <!-- Module Dependencies -->
         <dependency>
