travis & sonar updates

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,8 @@ sonar.projectKey=org.yagel:environment.monitor
 sonar.projectName=environment.monitor
 sonar.projectVersion=2.0.0
 
+sonar.modules=environment.monitor.core,environment.monitor.plugins,environment.monitor.runner,environment.monitor.server
+
 # =====================================================
 #   Meta-data for the project
 # =====================================================
