--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ addons:
       - develop
 
 script:
-  - mvn clean install
-  - sonar-scanner
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+
 
 cache:
   directories:
