test structure refactoring

--- a/environment.monitor.runner/pom.xml
+++ b/environment.monitor.runner/pom.xml
@@ -85,7 +85,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <excludes>
-                        <exclude>org.yagel.monitor.runner.test.intergation.**</exclude>
+                        <exclude>org.yagel.monitor.runner.test.integration.**</exclude>
                     </excludes>
                 </configuration>
 
@@ -95,7 +95,7 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
                     <includes>
-                        <include>org.yagel.monitor.runner.test.intergation.**</include>
+                        <include>org.yagel.monitor.plugins.test.integration.**</include>
                     </includes>
                     <systemProperties>
                         <property>
