--- a/environment.monitor.runner/src/main/resources/log4j.properties
+++ b/environment.monitor.runner/src/main/resources/log4j.properties
@@ -1,12 +1,12 @@
 # Root logger option
-log4j.rootLogger=DEBUG, file, console
+log4j.rootLogger=DEBUG, console
 # Direct log messages to a log file
-log4j.appender.file=org.yagel.monitor.logging.ThreadFileAppender
-log4j.appender.file.File=TEMP/monitor_log/loging.log
-log4j.appender.file.MaxFileSize=10MB
-log4j.appender.file.MaxBackupIndex=5
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+#log4j.appender.file=org.yagel.monitor.logging.ThreadFileAppender
+#log4j.appender.file.File=TEMP/monitor_log/loging.log
+#log4j.appender.file.MaxFileSize=10MB
+#log4j.appender.file.MaxBackupIndex=5
+#log4j.appender.file.layout=org.apache.log4j.PatternLayout
+#log4j.appender.file.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
