--- a/environment.monitor.server/src/main/resources/application.properties
+++ b/environment.monitor.server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 app.name=environment.monitor
 app.description=${app.name}  Tool for continuous gathering, aggregation & representation of any environmental components states
 #server.servlet.path=/api
+spring.jackson.default-property-inclusion=NON_NULL
