--- a/environment.monitor.ui/package.json
+++ b/environment.monitor.ui/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/lodash": "^4.14.77",
     "admin-lte": "^2.3.11",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
@@ -31,6 +32,7 @@
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "0.0.4",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "ng2-daterangepicker": "^2.0.7",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
