structure refactoring to support using test extension during project build (e2e tests supported now)

--- a/environment.monitor.plugins/pom.xml
+++ b/environment.monitor.plugins/pom.xml
@@ -19,11 +19,7 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.yagel</groupId>
-            <artifactId>environment.monitor.core</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -42,6 +38,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--Module dependencies-->
+        <dependency>
+            <groupId>org.yagel</groupId>
+            <artifactId>environment.monitor.core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
