--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,10 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>2.20</version>
+                    <configuration>
+                        <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                    </configuration>
+
                     <executions>
                         <execution>
                             <goals>
