--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ addons:
 
 script:
   - mvn clean package
-  - mvn -pl clean --fail-never org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar
+  - mvn clean --fail-never org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar
 
 
 cache:
