basic compatibility with java 11

--- a/environment.monitor.server/src/main/resources/application.properties
+++ b/environment.monitor.server/src/main/resources/application.properties
@@ -2,3 +2,4 @@ app.name=environment.monitor
 app.description=${app.name}  Tool for continuous gathering, aggregation & representation of any environmental components states
 #server.servlet.path=/api
 spring.jackson.default-property-inclusion=NON_NULL
+spring.jackson.serialization.write-dates-as-timestamps=true
