--- a/environment.monitor.core/pom.xml
+++ b/environment.monitor.core/pom.xml
@@ -23,6 +23,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.4.0-b180830.0438</version>
+        </dependency>
     </dependencies>
 
     <build>
