--- a/environment.monitor.runner/pom.xml
+++ b/environment.monitor.runner/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mongo.java.version>3.4.0</mongo.java.version>
+        <mongo.java.version>3.8.0</mongo.java.version>
         <root.dir>${project.parent.basedir}</root.dir>
     </properties>
 
@@ -65,6 +65,13 @@
             <artifactId>environment.monitor.test.extension</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
         </dependency>
 
     </dependencies>
@@ -116,7 +123,7 @@
             <plugin>
                 <groupId>com.github.joelittlejohn.embedmongo</groupId>
                 <artifactId>embedmongo-maven-plugin</artifactId>
-                <version>0.3.4</version>
+                <version>0.4.1</version>
                 <executions>
                     <execution>
                         <id>start</id>
