--- a/pom.xml
+++ b/pom.xml
@@ -17,18 +17,22 @@
     </modules>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <testng.version>6.10</testng.version>
         <log4j.version>1.2.14</log4j.version>
         <root.dir>${project.basedir}</root.dir>
         <commons-lang3.version>3.6</commons-lang3.version>
+        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+        <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
+        <maven.surefire.plugin.version>3.0.0-M3</maven.surefire.plugin.version>
+        <maven.failsafe.plugin.verion>3.0.0-M3</maven.failsafe.plugin.verion>
         <!-- <github.global.server>github</github.global.server>-->
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.M3</version>
+        <version>2.1.4.RELEASE</version>
     </parent>
 
     <build>
@@ -37,7 +41,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
+                    <version>${maven.compiler.plugin.version}</version>
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
@@ -55,7 +59,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>2.1.2</version>
+                    <version>${maven.source.plugin.version}</version>
                     <executions>
                         <execution>
                             <goals>
@@ -75,12 +79,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.20</version>
+                    <version>${maven.surefire.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.20</version>
+                    <version>${maven.failsafe.plugin.verion}</version>
                     <configuration>
                         <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                     </configuration>
